# tetra-solve-rs

./: Cargo.toml  LICENSE.md  README.md  run_python_tests.sh
cedar-solver/: Cargo.toml  build.rs  run_python_tests.sh
cedar-solver/src/: lib.rs  tetra3_solver.rs
cedar-solver/tests/: generate_solver_test_data.rs  tetra3_server_py_test.rs
proto/: tetra3.proto
server/proto/: tetra3.proto
server/src/: lib.rs  main.rs
server/tests/: tetra3_server_test.rs
src/: lib.rs  tetra3.rs  tetra3_solver.rs
tests/: tetra3_server_py_test.rs
tetra3/: Cargo.toml
tetra3-py/: Cargo.toml  README.md  pyproject.toml  test_python_wrapper.sh
tetra3-py/src/: lib.rs
tetra3-py/tetra3/: __init__.py
tetra3/src/: extractor.rs  fast_extractor.rs  fast_extractor_seq.rs  lib.rs  solver.rs  tetra3.rs
tetra3/tests/: test_mirrored_image_e2e.rs  validate_extractor.rs  validate_solver.rs
