[workspace]
members = [
    "tetra3",
    "cedar-solver"
]
resolver = "2"

[profile.release]
lto = "fat"            # Enables Link-Time Optimization across all dependency crates
codegen-units = 1      # Compiles the whole program as a single unit for max optimization
panic = "abort"        # Removes stack-unwinding overhead
strip = true           # Strips debug symbols to reduce binary size and memory layout
