[package]
name = "cedar-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
zip = "0.6"
cedar-elements = { path = "../../cedar-server/elements" }
ndarray = "0.17.1"
async-trait = "0.1.89"
canonical-error = "0.1.0"
tokio = "1.48.0"
prost = "0.12.3"
prost-types = "0.12.3"
tetra3 = { path = "../tetra3" }

[build-dependencies]
prost-build = "0.12.3"
tonic-build = "0.11"

[dev-dependencies]
tetra3_server = { path = "../../tetra3_server" }
tokio = { version = "1.0", features = ["full", "test-util"] }
