[package]
name = "cedar-solver"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tetra3-solve-server"
path = "src/bin/tetra3_solve_server.rs"

[dependencies]
zip = "0.6"
cedar-elements = { path = "../../cedar-server/elements" }
ndarray = "0.17.1"
async-trait = "0.1.89"
canonical-error = "0.1.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
prost = "0.12.3"
prost-types = "0.12.3"
tetra3 = { path = "../tetra3" }
tonic = "0.11"
tonic-web = "0.11.0"
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
prctl = "1.0.0"

[build-dependencies]
prost-build = "0.12.3"
tonic-build = "0.11"

[dev-dependencies]
tetra3_server = { path = "../../tetra3_server" }
tokio = { version = "1.0", features = ["full", "test-util"] }
